// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarPanels render activity sidebar should render default component 1`] = `
<Switch>
  <Route
    exact={true}
    path={
      Array [
        "/activity",
        "/activity/:activeFeedItemType/:activeFeedItemId",
      ]
    }
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render details sidebar should render default component 1`] = `
<Switch>
  <Route
    exact={true}
    path="/details"
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render details sidebar should render versions 1`] = `
<Switch>
  <Route
    path="/:sidebar/versions/:versionId?"
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render metadata sidebar should render default component 1`] = `
<Switch>
  <Route
    exact={true}
    path="/metadata"
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render should render no sidebar 1`] = `
<Switch>
  <Route
    render={[Function]}
  />
</Switch>
`;

exports[`elements/content-sidebar/SidebarPanels render skills sidebar should render default component 1`] = `
<Switch>
  <Route
    exact={true}
    path="/skills"
    render={[Function]}
  />
  <Route
    render={[Function]}
  />
</Switch>
`;
